--- a/Restneer.Web.Panel/wwwroot/index.html
+++ b/Restneer.Web.Panel/wwwroot/index.html
@@ -2,8 +2,8 @@
 <htm lang="en-us" id="extr-page">
 <head>
     <meta charset="utf-8">
-    <title>Restneer</title>
-    <meta name="author" content="leandrocurioso">
+    <title>Restneer Pnael</title>
+    <meta name="author" content="https://github.com/leandrocurioso/Restneer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" media="screen" href="bundle.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/page/index.css?0">
@@ -29,12 +29,12 @@
                     <div ng-include="'module/index-restneer/index-restneer-login.view.html'"></div>
                 </ng-view>
             </div>
+            </div>
         </div>
 
-    </div>
     <!--[if IE 8]>
         <h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
     <![endif]-->
-    <script src="module/index-restneer/index-restneer-bundle.app.js"></script>
+    <script src="module/index-restneer/index-restneer-bundle.app.js?1"></script>
 </body>
 </htm>
