--- a/Restneer.Web.Panel/wwwroot/module/index-restneer/index-restneer-login.view.html
+++ b/Restneer.Web.Panel/wwwroot/module/index-restneer/index-restneer-login.view.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="LoginController" class="col-centered col-xs-12 col-sm-12 col-md-5 col-lg-4">
     <div class="well no-padding">
-        <form action="index.html" id="login-form" class="smart-form client-form">
+        <form id="login-form" class="smart-form client-form">
             <header>
                 Sign In
             </header>
@@ -9,7 +9,7 @@
                     <label class="label">E-mail</label>
                     <label class="input">
                         <i class="icon-append fa fa-user"></i>
-                        <input type="email" name="email" ng-value="email">
+                        <input type="email" name="email" ng-model="email" />
                         <b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i> Please enter email address/username</b>
                     </label>
                 </section>
@@ -17,7 +17,7 @@
                     <label class="label">Password</label>
                     <label class="input">
                         <i class="icon-append fa fa-lock"></i>
-                        <input type="password" name="password">
+                        <input type="password" name="password" ng-model="password" />
                         <b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Enter your password</b>
                     </label>
                     <div class="note">
@@ -32,7 +32,7 @@
                 </section>
             </fieldset>
             <footer>
-                <button type="submit" class="btn btn-primary">
+                <button type="button" ng-click="authenticate()" class="btn btn-primary">
                     Sign in
                 </button>
             </footer>
